day2/new-workers/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ignition
spec:
  selector:
    app: ignition
  ports:
    - name: http
      port: 80
      targetPort: http
