day2/new-workers/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ignition
spec:
  to:
    kind: Service
    name: ignition
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
